# flahscard-ia

./: .env  README.md  anki_deck_generator.py  coda_integration.py  flashcard_generator.py  main.py  pyproject.toml  teste.py  teste2.py
anki_decks/: Concurso_20250307_174900.apkg
